# personal-website

./: .gitignore  Cargo.toml  justfile
.github/workflows/: rust.yml
assets/: style.css
assets/pages/blog/: custom-stuff.dj  nix-session-sigkill.dj  readme.dj
assets/public/: style.css
src/: css.rs  djot.rs  layout.rs  main.rs
src/blog/: index.rs  mod.rs  page.rs  rss.rs
src/djot/: mod.rs  transform_headers.rs  transform_sidenotes.rs
src/pages/: cool_stuff.rs  honeypot.rs  index.rs  mod.rs
src/projects/: mod.rs
