[package]
name = "actiongen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4"
comrak = { version = "0.21", features = ["syntect"] }
gray_matter = "0.2"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
grass = "0.13"
maud = "0.26"
rss = "2.0"
once_cell = "1.19"
