[package]
name = "actiongen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "4.4"
grass = "0.13"
gray_matter = "0.2"
jotdown = "0.3"
lightningcss = "1.0.0-alpha.52"
maud = "0.26"
once_cell = "1.19"
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
